# bammi-web

./: README.md  eslint.config.mjs  package-lock.json  package.json  webpack.config.js
server/: .dir-locals.el  Cargo.toml
server/src/: main.rs
src/: bammi.ts  index.html  index.ts  lobby.html  style.css
src/game/: bammi.ts  board_generation.ts  player_info.ts
src/math/: position.ts
