[package]
name = "bammi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4.27"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
